--- a/analiseficha.html
+++ b/analiseficha.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Fichas Técnicas • CMV</title>
+<title>Análise de Fichas Técnicas • CMV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -11,7 +11,9 @@
 <style>
 :root{
   --primary:#2563eb;
-  --danger:#ef4444;
+  --primary-dark:#1e40af;
+  --success:#16a34a;
+  --danger:#dc2626;
   --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
@@ -29,16 +31,16 @@ body{
   display:grid;
   grid-template-columns:2fr 1fr auto;
   gap:14px;
-  padding:20px;
+  padding:22px;
 }
 .filters input,.filters select{
-  padding:14px;
+  padding:14px 16px;
   border-radius:16px;
   border:1px solid #cbd5e1;
   font-weight:600;
 }
 .filters button{
-  background:linear-gradient(180deg,#2563eb,#1e40af);
+  background:linear-gradient(180deg,var(--primary),var(--primary-dark));
   border:none;
   color:#fff;
   font-weight:800;
@@ -50,16 +52,16 @@ body{
 /* GRID */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
-  gap:20px;
-  padding:0 20px 40px;
+  grid-template-columns:repeat(auto-fill,minmax(280px,1fr));
+  gap:22px;
+  padding:0 22px 40px;
 }
 
 /* CARD */
 .card{
   background:var(--card);
-  border-radius:22px;
-  box-shadow:0 18px 40px rgba(0,0,0,.08);
+  border-radius:24px;
+  box-shadow:0 20px 45px rgba(0,0,0,.08);
   overflow:hidden;
   display:flex;
   flex-direction:column;
@@ -69,7 +71,7 @@ body{
   height:180px;
   object-fit:cover;
 }
-.card-body{padding:16px}
+.card-body{padding:18px}
 .card h3{margin:0;font-size:18px;font-weight:800}
 
 .badge{
@@ -90,34 +92,31 @@ body{
 }
 
 .lucro{
-  margin-top:10px;
-  padding:8px;
-  border-radius:12px;
+  margin-top:12px;
+  padding:10px;
+  border-radius:14px;
   text-align:center;
   font-weight:900;
 }
 .lucro.pos{background:#dcfce7;color:#166534}
 .lucro.neg{background:#fee2e2;color:#991b1b}
 
-button{
-  margin-top:12px;
+.card button{
+  margin-top:14px;
   padding:12px;
   border-radius:16px;
   border:none;
-  background:linear-gradient(180deg,#2563eb,#1e40af);
+  background:linear-gradient(180deg,var(--primary),var(--primary-dark));
   color:#fff;
   font-weight:800;
   cursor:pointer;
-}
-button.danger{
-  background:linear-gradient(180deg,#ef4444,#991b1b);
 }
 
 /* MODAL */
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(15,23,42,.45);
+  background:rgba(15,23,42,.5);
   display:none;
   align-items:center;
   justify-content:center;
@@ -126,48 +125,67 @@ button.danger{
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:900px;
+  max-width:920px;
   max-height:90vh;
   overflow:auto;
-  padding:24px;
-  border-radius:26px;
+  padding:26px;
+  border-radius:28px;
 }
 .close{
   background:#e5e7eb;
   border:none;
   border-radius:50%;
-  width:36px;
-  height:36px;
+  width:38px;
+  height:38px;
   font-weight:900;
   cursor:pointer;
 }
 
 /* FORM */
+label{
+  font-size:13px;
+  font-weight:800;
+  margin-top:16px;
+  display:block;
+}
 input,select{
   width:100%;
-  padding:12px;
+  padding:12px 14px;
   border-radius:14px;
   border:1px solid #cbd5e1;
   margin-top:6px;
 }
-label{font-size:13px;font-weight:800;margin-top:14px;display:block}
 
 /* ING EDIT */
 .ing-edit{
   display:grid;
   grid-template-columns:2fr 1fr 1fr auto;
   gap:8px;
-  margin-top:8px;
+  margin-top:10px;
+}
+.ing-edit button{
+  background:linear-gradient(180deg,#ef4444,#991b1b);
+}
+
+/* ACTIONS */
+.actions{
+  display:flex;
+  gap:12px;
+  margin-top:22px;
+}
+.actions button.danger{
+  background:linear-gradient(180deg,#ef4444,#991b1b);
 }
 </style>
 </head>
 
 <body>
 
+<!-- FILTROS -->
 <div class="filters">
   <input id="fNome" placeholder="🔍 Buscar prato" oninput="filtrar()">
   <select id="fTipo" onchange="filtrar()">
-    <option value="">Todos</option>
+    <option value="">Todos os tipos</option>
     <option>PRATO PRINCIPAL</option>
     <option>ENTRADA</option>
     <option>SOBREMESA</option>
@@ -178,6 +196,7 @@ label{font-size:13px;font-weight:800;margin-top:14px;display:block}
   <button onclick="nova()">+ Nova ficha</button>
 </div>
 
+<!-- CARDS -->
 <div id="cards" class="grid"></div>
 
 <!-- MODAL -->
@@ -188,7 +207,7 @@ label{font-size:13px;font-weight:800;margin-top:14px;display:block}
       <button class="close" onclick="fechar()">✕</button>
     </div>
 
-    <label>Nome</label>
+    <label>Nome do prato</label>
     <input id="mNome">
 
     <label>Tipo</label>
@@ -204,17 +223,19 @@ label{font-size:13px;font-weight:800;margin-top:14px;display:block}
     <label>Preço de venda</label>
     <input id="mPreco" type="number" step="0.01">
 
-    <label>Rendimento</label>
+    <label>Rendimento (porções)</label>
     <input id="mRendimento" type="number" min="1">
 
-    <label>Foto</label>
-    <input type="file" id="mFoto">
+    <label>Foto do prato</label>
+    <input type="file" id="mFoto" accept="image/*">
 
-    <h3 style="margin-top:16px">Ingredientes</h3>
+    <h3 style="margin-top:18px">Ingredientes</h3>
     <div id="mLista"></div>
 
-    <button onclick="salvar()">Salvar</button>
-    <button class="danger" onclick="excluir()">Excluir ficha</button>
+    <div class="actions">
+      <button onclick="salvar()">Salvar alterações</button>
+      <button class="danger" onclick="excluir()">Excluir ficha</button>
+    </div>
   </div>
 </div>
 
@@ -233,6 +254,7 @@ let fichas=[], atual=null, itens=[];
   filtrar();
 })();
 
+/* RENDER CARD */
 async function renderCard(f){
   const its=(await sb.from("buffet_itens").select("*").eq("buffet_id",f.id)).data||[];
   const custoTotal=its.reduce((s,i)=>s+Number(i.custo_calculado||0),0);
@@ -248,16 +270,27 @@ async function renderCard(f){
       <span class="badge">${f.tipo}</span>
       <span class="badge">Venda ${moeda(f.preco_venda)}</span>
       <span class="badge">CMV ${moeda(custoUnit)}</span>
+
       ${its.slice(0,3).map(i=>`
-        <div class="ing"><span>${i.nome}</span><strong>${moeda(i.custo_calculado)}</strong></div>
+        <div class="ing">
+          <span>${i.nome}</span>
+          <strong>${moeda(i.custo_calculado)}</strong>
+        </div>
       `).join("")}
+
       ${its.length>3?`<small>+${its.length-3} ingredientes</small>`:""}
-      <div class="lucro ${lucro>=0?'pos':'neg'}">Lucro ${moeda(lucro)}</div>
-      <button onclick="editar('${f.id}')">Editar</button>
-    </div>`;
+
+      <div class="lucro ${lucro>=0?'pos':'neg'}">
+        Lucro ${moeda(lucro)}
+      </div>
+
+      <button onclick="editar('${f.id}')">Editar ficha</button>
+    </div>
+  `;
   cards.appendChild(c);
 }
 
+/* FILTRO */
 async function filtrar(){
   cards.innerHTML="";
   const filtradas=fichas.filter(f=>
@@ -269,18 +302,19 @@ async function filtrar(){
   }
 }
 
-/* CRUD */
+/* NOVA */
 function nova(){
   atual=null;
   itens=[];
-  mTitulo.textContent="Nova ficha";
+  mTitulo.textContent="Nova ficha técnica";
   mNome.value="";
   mPreco.value=0;
   mRendimento.value=1;
-  mLista.innerHTML="<em>Ingredientes serão adicionados depois</em>";
+  mLista.innerHTML="<em>Ingredientes serão adicionados no cadastro</em>";
   modal.style.display="flex";
 }
 
+/* EDITAR */
 async function editar(id){
   atual=(await sb.from("buffet").select("*").eq("id",id).single()).data;
   itens=(await sb.from("buffet_itens").select("*").eq("buffet_id",id)).data||[];
@@ -293,6 +327,7 @@ async function editar(id){
   modal.style.display="flex";
 }
 
+/* RENDER ING */
 function renderItens(){
   mLista.innerHTML=itens.map((i,idx)=>`
     <div class="ing-edit">
@@ -305,18 +340,22 @@ function renderItens(){
   `).join("");
 }
 
+/* RECALC */
 function recalc(i){
-  itens[i].custo_calculado=(itens[i].quantidade*itens[i].custo_unitario)/(itens[i].rendimento_percentual/100);
+  itens[i].custo_calculado =
+    (itens[i].quantidade * itens[i].custo_unitario) /
+    (itens[i].rendimento_percentual / 100);
   renderItens();
 }
 
+/* SALVAR */
 async function salvar(){
   let fotoUrl=atual?.foto_url||null;
 
   if(mFoto.files.length){
     const f=mFoto.files[0];
     const path=`fichas/${crypto.randomUUID()}.${f.name.split(".").pop()}`;
-    await sb.storage.from("buffet").upload(path,f);
+    await sb.storage.from("buffet").upload(path,f,{upsert:false});
     fotoUrl=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
   }
 
@@ -349,10 +388,12 @@ async function salvar(){
   location.reload();
 }
 
+/* EXCLUIR */
 async function excluir(){
   if(!confirm("Excluir ficha definitivamente?"))return;
   await sb.from("buffet").delete().eq("id",atual.id);
-  fechar();location.reload();
+  fechar();
+  location.reload();
 }
 
 function fechar(){
